# CameraDemonstrator

./: .gitignore  README.md
CameraDemonstrator/: CameraDemonstrator.pro  camerademonstatorwidget.cpp  camerademonstatorwidget.h  camerademonstatorwidget.ui  main.cpp
CameraDemonstrator/DemonstratorWidget_QT514_VS2019/: DemonstratorWidget.pro  DemonstratorWidget.vcxproj  DemonstratorWidget.vcxproj.filters  demonstratorwidget.h  demonstratorwidget.ui  main.cpp  ui_demonstratorwidget.h
CameraDemonstrator/ViewerWidget_QT58_VS2013/: ViewerWidget.pro  ViewerWidget.vcxproj  ViewerWidget.vcxproj.filters  widget.cpp  widget.h  widget.ui
CameraDemonstrator/testImportSDK/: testImportSDK.sln
CameraDemonstrator_/DemonstratorWidget/: .qmake.stash  DemonstratorWidget.pri  DemonstratorWidget.sln  DemonstratorWidget.vcxproj  DemonstratorWidget.vcxproj.filters  demonstratorwidget.cpp  demonstratorwidget.h
CameraFactorSDK/: CameraFactory_x64.lib  readme.txt
CameraFactorSDK/include/: CameraDescription.h  CameraFactory.h  CameraSupport.h  CameraTypeDefine.h  EnumMapBase.h  Factory.h  SDKImport.h
CameraFactorSDK/x64/: CameraFactory.lib  CameraFactoryD.lib  CameraFactory_x64.lib  CameraFactory_x64_d.lib
TEST/: CMakeLists.txt  CMakeSettings.json
TEST/TEST/: CMakeLists.txt  Viewer.cpp  Viewer.h
TEST/TEST/CameraFactorSDK/: CameraFactory_x64.lib  CameraFactory_x64_d.lib
TEST/TEST/CameraFactorSDK/include/: CameraBase.h  CameraDescription.h  CameraSupport.h  CameraTypeDefine.h  SDKImport.h
TestSDK/test1_VS2013_QT/: test1.sln
TestSDK/test1_VS2013_QT/test1/: test1.vcxproj  (+4 more)
(+22 files in other folders)
